--- a/index.html
+++ b/index.html
@@ -313,7 +313,8 @@
     <section class="es-carousel-section">
       <div class="main-carousel">
         <a href="confirmed-order.html" class="es-order-status">Jarayondagi buyurtmangiz</a>
-        <a href="confirmed-order.html" class="es-order-status es-order-status-truck d-none"><img src="img/truck-time.svg" alt=""></a>
+        <a href="confirmed-order.html" class="es-order-status es-order-status-truck d-none"><img
+            src="img/truck-time.svg" alt=""></a>
         <div class="carousel" data-ride="carousel" id="carouselExampleIndicators">
           <ol class="carousel-indicators">
             <li class="" data-slide-to="0" data-target="#carouselExampleIndicators"></li>
@@ -327,10 +328,12 @@
                 <div class="es-banner">
                   <h3 class="es-banner-header">Farzand tarbiyasi</h3>
                   <p class="es-banner-desc">kitoblariga 1-7 avgust kunlari chegirma</p>
-                  <a href="action-view.html" class="btn-more">BATAFSIL MA’LUMOT <img class="ml-1" src="img/arrow-right.svg" alt=""></a>
+                  <a href="action-view.html" class="btn-more">BATAFSIL MA’LUMOT <img class="ml-1"
+                      src="img/arrow-right.svg" alt=""></a>
                 </div>
               </div>
-              <a href="action-view.html" class="btn-more mob-banner-btn-more">BATAFSIL MA’LUMOT <img class="ml-1" src="img/arrow-right.svg" alt=""></a>
+              <a href="action-view.html" class="btn-more mob-banner-btn-more">BATAFSIL MA’LUMOT <img class="ml-1"
+                  src="img/arrow-right.svg" alt=""></a>
             </div>
             <div class="carousel-item">
               <img class="main-carusel-img img-fluid w-100" src="img/hadis-banner.png" />
@@ -338,10 +341,12 @@
                 <div class="es-banner">
                   <h3 class="es-banner-header">Hadis kitoblariga</h3>
                   <p class="es-banner-desc">ramazon oyida -35%lik chegirma</p>
-                  <a href="action-view.html" class="btn-more">BATAFSIL MA’LUMOT <img class="ml-1" src="img/arrow-right.svg" alt=""></a>
+                  <a href="action-view.html" class="btn-more">BATAFSIL MA’LUMOT <img class="ml-1"
+                      src="img/arrow-right.svg" alt=""></a>
                 </div>
               </div>
-              <a href="action-view.html" class="btn-more mob-banner-btn-more">BATAFSIL MA’LUMOT <img class="ml-1" src="img/arrow-right.svg" alt=""></a>
+              <a href="action-view.html" class="btn-more mob-banner-btn-more">BATAFSIL MA’LUMOT <img class="ml-1"
+                  src="img/arrow-right.svg" alt=""></a>
             </div>
             <div class="carousel-item active">
               <img class="main-carusel-img img-fluid w-100" src="img/hadis-banner.png" />
@@ -351,7 +356,8 @@
                   <p class="es-banner-desc">mushkambari Attorda yana sotuvda!</p>
                 </div>
               </div>
-              <a href="action-view.html" class="btn-more mob-banner-btn-more">BATAFSIL MA’LUMOT <img class="ml-1" src="img/arrow-right.svg" alt=""></a>
+              <a href="action-view.html" class="btn-more mob-banner-btn-more">BATAFSIL MA’LUMOT <img class="ml-1"
+                  src="img/arrow-right.svg" alt=""></a>
             </div>
           </div>
           <button class="carousel-control-prev d-none" data-slide="prev" data-target="#carouselExampleIndicators"
@@ -1928,14 +1934,14 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/menu">
+        <a class="nav-link" href="/menu" data-target="#searchMobModal" data-toggle="modal">
           <img src="img/search-status.svg" />
           <img class="d-none" src="img/search-status-full.svg" />
           <span class="menu-title">Каталог</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" data-target="#cartModal" data-toggle="modal" href="#">
           <img src="img/bag-2.svg" />
           <img class="d-none" src="img/bag-full-2.svg" />
           <span class="badge badge-cart">2</span>
@@ -1959,6 +1965,193 @@
     </ul>
   </div>
 
+  <!-- Search Modal -->
+  <div class="modal fade" id="searchMobModal" tabindex="-1" role="dialog" aria-labelledby="searchMobModalTitle"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header position-relative">
+          <input type="text" class="mob-modal-search form-control" placeholder="Izlash...">
+          <img class="mob-modal-search-ic" src="img/search-normal.svg" alt="" />
+        </div>
+        <div class="modal-body">
+          <h3 class="mob-search-modal-header">Bo'limlar</h3>
+          <div id="accordion">
+            <div class="card border-0">
+              <div class="card-header accordion-item d-flex align-items-center" id="headingOne">
+                <div class="accordion-item-ic-container">
+                  <img src="img/mob-search-tab-1.svg" alt="">
+                </div>
+                <h5 class="mb-0">
+                  <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
+                    aria-controls="collapseOne">
+                    <span>Qur’oni Karim</span><img src="img/collapse-item-ic.svg" alt="" />
+                  </button>
+                </h5>
+              </div>
+
+              <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                <div class="card-body accordion-item-body">
+                  <ul class="list-unstyled mb-0">
+                    <li class="accordion-list-item accordion-list-item-all">
+                      <a href="#">Barchasini ko‘rish</a>
+                    </li>
+                    <li class="accordion-list-item">
+                      <a href="#">Diniy-ma’rifiy adabiyot</a>
+                    </li>
+                    <li class="accordion-list-item">
+                      <a href="#">Badiiy adabiyot</a>
+                    </li>
+                    <li class="accordion-list-item">
+                      <a href="#">Biznes va shaxsiy rivojlanish</a>
+                    </li>
+                    <li class="accordion-list-item">
+                      <a href="#">Rus tilidagi diniy kitoblar</a>
+                    </li>
+                    <li class="accordion-list-item">
+                      <a href="#">Ota-onalar va bolalar uchun</a>
+                    </li>
+                    <li class="accordion-list-item">
+                      <a href="#">Xatcho‘p</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="card border-0">
+              <div class="card-header accordion-item d-flex align-items-center" id="headingTwo">
+                <div class="accordion-item-ic-container">
+                  <img src="img/mob-search-tab-2.svg" alt="">
+                </div>
+                <h5 class="mb-0">
+                  <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+                    aria-expanded="false" aria-controls="collapseTwo">
+                    <span>Kitoblar</span><img src="img/collapse-item-ic.svg" alt="" />
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                <div class="card-body accordion-item-body">
+                  Anim pariatur cliche reprehenderit,
+                </div>
+              </div>
+            </div>
+            <div class="card border-0">
+              <div class="card-header accordion-item d-flex align-items-center" id="headingThree">
+                <div class="accordion-item-ic-container">
+                  <img src="img/mob-search-tab-3.svg" alt="">
+                </div>
+                <h5 class="mb-0">
+                  <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
+                    aria-expanded="false" aria-controls="collapseThree">
+                    <span>Ibodat anjomlari</span><img src="img/collapse-item-ic.svg" alt="" />
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                <div class="card-body accordion-item-body">
+                  Anim pariatur cliche reprehenderit, enim
+                </div>
+              </div>
+            </div>
+            <div class="card border-0">
+              <div class="card-header accordion-item d-flex align-items-center" id="headingFour">
+                <div class="accordion-item-ic-container">
+                  <img src="img/mob-search-tab-4.svg" alt="">
+                </div>
+                <h5 class="mb-0">
+                  <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour"
+                    aria-expanded="false" aria-controls="collapseFour">
+                    <span>Kitoblar</span><img src="img/collapse-item-ic.svg" alt="" />
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+                <div class="card-body accordion-item-body">
+                  Anim pariatur cliche reprehenderit,
+                </div>
+              </div>
+            </div>
+            <div class="card border-0">
+              <div class="card-header accordion-item d-flex align-items-center" id="headingFive">
+                <div class="accordion-item-ic-container">
+                  <img src="img/mob-search-tab-5.svg" alt="">
+                </div>
+                <h5 class="mb-0">
+                  <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive"
+                    aria-expanded="false" aria-controls="collapseFive">
+                    <span>Ibodat anjomlari</span><img src="img/collapse-item-ic.svg" alt="" />
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
+                <div class="card-body accordion-item-body">
+                  Anim pariatur cliche reprehenderit, enim
+                </div>
+              </div>
+            </div>
+            <div class="card border-0">
+              <div class="card-header accordion-item d-flex align-items-center" id="headingSix">
+                <div class="accordion-item-ic-container">
+                  <img src="img/mob-search-tab-6.svg" alt="">
+                </div>
+                <h5 class="mb-0">
+                  <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSix"
+                    aria-expanded="false" aria-controls="collapseSix">
+                    <span>Kitoblar</span><img src="img/collapse-item-ic.svg" alt="" />
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
+                <div class="card-body accordion-item-body">
+                  Anim pariatur cliche reprehenderit,
+                </div>
+              </div>
+            </div>
+            <div class="card border-0">
+              <div class="card-header accordion-item d-flex align-items-center" id="headingSeven">
+                <div class="accordion-item-ic-container">
+                  <img src="img/mob-search-tab-7.svg" alt="">
+                </div>
+                <h5 class="mb-0">
+                  <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSeven"
+                    aria-expanded="false" aria-controls="collapseSeven">
+                    <span>Ibodat anjomlari</span><img src="img/collapse-item-ic.svg" alt="" />
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordion">
+                <div class="card-body accordion-item-body">
+                  Anim pariatur cliche reprehenderit, enim
+                </div>
+              </div>
+            </div>
+            <div class="card border-0">
+              <div class="card-header accordion-item d-flex align-items-center" id="headingEight">
+                <div class="accordion-item-ic-container">
+                  <img src="img/mob-search-tab-8.svg" alt="">
+                </div>
+                <h5 class="mb-0">
+                  <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseEight"
+                    aria-expanded="false" aria-controls="collapseEight">
+                    <span>Ibodat anjomlari</span><img src="img/collapse-item-ic.svg" alt="" />
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseEight" class="collapse" aria-labelledby="headingEight" data-parent="#accordion">
+                <div class="card-body accordion-item-body">
+                  Anim pariatur cliche reprehenderit, enim
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Cart Modal -->
   <div aria-hidden="true" aria-labelledby="cartModalLabel" class="modal right es-cart-modal fade" id="cartModal"
     tabindex="-1">
@@ -1966,7 +2159,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">
-            Корзина <span class="modal-subtitle">/ 3 товара</span>
+            Корзина /<span class="modal-subtitle"> 3 товара</span>
           </h5>
           <button aria-label="Close" class="close" data-dismiss="modal" type="button">
             <img src="img/ic_close_modal.svg" />
@@ -1983,21 +2176,39 @@
               <div class="es-cart-img">
                 <img class="img-fluid" src="img/cart-item.jpg" />
               </div>
-              <div class="es-cart-info">
-                <div class="es-cart-category">
-                  <a href="#">KITOBLAR - BADIIY ADABIYOT -
-                    TURK ADABIYOTI</a>
+              <div class="es-cart-product-info d-flex">
+                <div class="es-cart-info">
+                  <div class="es-cart-category">
+                    <a href="#">KITOBLAR - BADIIY ADABIYOT -
+                      TURK ADABIYOTI</a>
+                  </div>
+                  <div class="es-cart-title">
+                    <a href="#">Hikmatlar kitobi. Shayx
+                      Rumiy Jaloliddin</a>
+                  </div>
+                  <div class="es-cart-param">
+                    240 bet
+                  </div>
                 </div>
-                <div class="es-cart-title">
-                  <a href="#">Hikmatlar kitobi. Shayx
-                    Rumiy Jaloliddin</a>
+                <div class="es-cart-price-qty">
+                  <div class="es-cart-qty-delete d-flex align-items-center">
+                    <div class="es-cart-qty">
+                      <button class="btn es-minus">
+                        <img src="img/minus.svg" alt="">
+                      </button>
+                      <span class="es-cart-product-qty">1</span>
+                      <button class="btn es-plus">
+                        <img src="img/add.svg" alt="">
+                      </button>
+                    </div>
+                    <button class="es-cart-delete btn">
+                      <img src="img/Delete.svg" alt="">
+                    </button>
+                  </div>
+                  <div class="es-cart-price">
+                    12,000 so‘m
+                  </div>
                 </div>
-                <div class="es-cart-param">
-                  240 bet
-                </div>
-              </div>
-              <div class="es-cart-price">
-                12,000 so‘m
               </div>
             </div>
             <div class="es-cart-item">
@@ -2136,7 +2347,8 @@
               <button class="btn es-left-arrow-btn"><img src="img/ic-arrow-left.svg" alt=""></button>
               <h2 class="es-auth-title">Tel.raqamni tasdiqlang</h2>
               <h4 class="es-user-number">+998 (90) 900-49-38</h4>
-              <input class="form-control es-number-code" name="phone" placeholder="4 xonali kodni kiriting" type="text" />
+              <input class="form-control es-number-code" name="phone" placeholder="4 xonali kodni kiriting"
+                type="text" />
               <p class="es-auth-mini-text">Kodni 29 soniyadan so‘ng qayta yuborishingiz
                 mumkin bo‘ladi</p>
               <button class="btn btn-buy btn-lg w-100">TEL.RAQAMNI TASDIQLASH</button>
@@ -2147,8 +2359,8 @@
               <h2 class="es-auth-title">Ism va familiyangiz</h2>
               <p class="es-auth-info">Hurmatli xaridor, mahsulotlarga to‘lov qilish va buyurtma berish uchun avval
                 ro‘yxatdan o‘ting yoki profilingiz mavjud bo‘lsa unga kiring</p>
-                <input class="form-control es-auth-name" name="f-name" placeholder="Ismingiz" type="text" />
-                <input class="form-control es-auth-name" name="f-name" placeholder="Familiyangiz" type="text" />
+              <input class="form-control es-auth-name" name="f-name" placeholder="Ismingiz" type="text" />
+              <input class="form-control es-auth-name" name="f-name" placeholder="Familiyangiz" type="text" />
               <button class="btn btn-buy btn-lg w-100">TASDIQLASH</button>
             </form>
           </div>
